--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = { workspace = true }
 heck = { workspace = true }
 proc-macro2 = { version = "1.0" }
 quote = { version = "1.0" }
-syn = { version = "2.0.25", features = ["extra-traits"] }
+syn = { version = "2.0.25", features = ["extra-traits", "full"] }
 wasmtime-component-util = { workspace = true }
 wasmtime-wit-bindgen = { workspace = true }
 wit-parser = { version = "0.13.0" }
