--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,5 @@ rand_core = { version = "0.6", default-features = false }
 bytes = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 heck = { version = "0.5", default-features = false }
+try-lock = { version = "0.2", default-features = false }
+atomic_refcell = { version = "0.1", default-features = false}
