Add newtypes for wasmtime structs
This allows for the "deprecated" warning to be shown even on sys target

--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -12,6 +12,7 @@ categories.workspace = true
 wasmtime = { workspace = true }
 wasm-bridge-macros = { workspace = true, optional = true }
 async-trait = { workspace = true, optional = true }
+ref-cast = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = { workspace = true }
