--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -8,9 +8,11 @@ license.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[dependencies]
+wasm-bridge-macros = { workspace = true, optional = true }
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { workspace = true }
-wasm-bridge-macros = { workspace = true, optional = true }
 async-trait = { workspace = true, optional = true }
 ref-cast = { workspace = true }
 
@@ -19,8 +21,6 @@ js-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
 wat = { workspace = true, optional = true }
-wasm-bridge-macros = { workspace = true, optional = true }
-async-trait = { workspace = true, optional = true }
 js-component-bindgen = { workspace = true, optional = true }
 anyhow = { workspace = true }
 try-lock = { workspace = true }
