Finalize new safe methods

--- a/crates/wasm-bridge-wasi/Cargo.toml
+++ b/crates/wasm-bridge-wasi/Cargo.toml
@@ -10,6 +10,7 @@ categories.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime-wasi = { workspace = true }
+wasm-bridge = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = { workspace = true }
