--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ wat = { version = "1.0", default-features = false }
 js-component-bindgen = { version = "1.0", default-features = false, features = ["transpile-bindgen"] }
 anyhow = { version = "1.0", default-features = false, features = ["std"] }
 ref-cast = { version = "1.0" }
+slab = { version = "0.4" }
 rand_core = { version = "0.6", default-features = false }
 bytes = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
