--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Install cargo component
         run: cargo install --version 0.10.1 cargo-component
 
+      - name: Install cargo expand
+        run: cargo install cargo-expand
+
       - uses: actions/checkout@v3
 
       - name: Cache build folders
